# project-manual

./: LICENSE  README.md
src/: PROJECT_MANUAL.adoc  meson.build
src/chapters/: COPYING.adoc  DEFINITIONS.adoc  GOALS.adoc  PERSONAS.adoc  SUMMARY.adoc  USER_STORIES.adoc
